--- a/src/styles/base/font.scss
+++ b/src/styles/base/font.scss
@@ -1,17 +1,17 @@
-@font-face {
-  font-family: 'Wremena-Light';
-  src: url('@static/') format('woff2'),
-      url('@static/') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+//   font-family: 'Wremena-Light';
+//   src: url('@static/') format('woff2'),
+//       url('@static/') format('woff');
+//   font-weight: 300;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-@font-face {
-  font-family: '';
-  src: url('@static/') format('woff2'),
-      url('@static/') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+//   font-family: '';
+//   src: url('@static/') format('woff2'),
+//       url('@static/') format('woff');
+//   font-weight: normal;
+//   font-style: normal;
+//   font-display: swap;
+// }
